# musical_notes

./: .gitignore  mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: scales.md
musical_notes/: scales.py
tests/: test_scales.py
